--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,75 +8,26 @@
     <link rel="stylesheet" href="index.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@600&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+    <title>Document</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-
-    <title> Lance - Programmer / Web Developer </title>
-
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-
+    <style></style>
 </head>
-
 <body>
-    <section id="backsec">
-        <section id="overlaysec">
+    <nav>
+        <div id="navtitle"> Lan<span>ce </span> </div>
 
-            <nav>
-                <div id="main_title_link"><br><span id="first">Lan</span><span id="last">ce</span><br><br></div>
+        <div id="links">
+            <a href="#" class="link"> About </a>
+        </div>
+    </nav>
 
-                <div id="list_a">
-                    <a href="#about" class="cc"> About </a>
-                    <a href="#skills" class="cc"> Skills </a>
-                    <a href="#services" class="cc"> Services </a>
-                    <a href="#contact" class="cc"> Contact </a>
-                </div>
-                <div id="burger">
-                    <i class="fas fa-bars" onclick="menuFunction()"> </i>
-                </div>
-            </nav>
-
-            <img src="man3.png" class="homeimg">
-
-            <div class="title"> Lan<span id="tce">ce </span> </div>
-            <div id="tagline"> Professional Web Developer </div>
-
-        </section>
+    <section class="section" id="lp">
+        
     </section>
-
-    <div id="overlaymenu">
-        <section id="menu">
-            <div id="menulinks">
-                <i class="fas fa-times-circle" id="secondicon" onclick="menuFunctionClose()"> </i>
-                <div id="menualllinks">
-                    <a href="#about" class="ccmenu" onclick="menuFunctionClose()"> About </a>
-                    <a href="#skills" class="ccmenu" onclick="menuFunctionClose()"> Skills </a>
-                    <a href="#services" class="ccmenu" onclick="menuFunctionClose()"> Services </a>
-                    <a href="#contact" class="ccmenu" onclick="menuFunctionClose()"> Contact </a>
-                </div>
-            </div>
-        </section>
-    </div>
-
-    <section id="about">
-        <div class="aboutheader" id="header"> About Me </div>
-        <img src="backimg.png" id="img">
-        <div class="abouttext"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque harum officia, deleniti esse quia eius aliquam enim unde voluptas sint, asperiores labore perspiciatis excepturi saepe sunt quod voluptates at animi! </div>
-    </section>
-
-    <script src="index.js"></script>
 </body>
-
 </html>
