--- a/index.html
+++ b/index.html
@@ -17,17 +17,30 @@
 
     <style></style>
 </head>
+
 <body>
     <nav>
         <div id="navtitle"> Lan<span>ce </span> </div>
 
         <div id="links">
-            <a href="#" class="link"> About </a>
+            <a href="#about" class="link"> About </a>
         </div>
     </nav>
 
     <section class="section" id="lp">
-        
+        <div class="overlay">
+            
+        </div>
+    </section>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" id="wave">
+        <path fill="#fff" fill-opacity="1" d="M0,64L80,80C160,96,320,128,480,128C640,128,800,96,960,96C1120,96,1280,128,1360,144L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
+    </svg>
+
+    <img src="man3.png" id="man">
+
+    <section id="about">
+
     </section>
 </body>
 </html>
