--- a/index.html
+++ b/index.html
@@ -3,46 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="index.css">
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 
-    <title>Document</title>
-
-    <style></style>
+    <title>Lance - Programmer and Web Developer</title>
 </head>
-
 <body>
-    <nav>
-        <div id="navtitle"> Lan<span>ce </span> </div>
-
-        <div id="links">
-            <a href="#about" class="link"> About </a>
-        </div>
-    </nav>
-
-    <section id="landingpage">
-        <section class="section" id="lp">
-            <div class="overlay">
-                
+    <div id="landingpage">
+        <nav id="nav">
+            <div class="logo"><img src="logo.png" id="logo"></div>
+            <div class="links">
+                <a href="#">About</a>
+                <a href="#">Skills</a>
+                <a href="#">Services</a>
+                <a href="#">Contact</a>
             </div>
-        </section>
-    
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" id="wave">
-            <path fill="#fff" fill-opacity="1" d="M0,64L80,80C160,96,320,128,480,128C640,128,800,96,960,96C1120,96,1280,128,1360,144L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
-        </svg>
+            <div class="hamburger"><i class="fas fa-bars" id="bars"></i></div>
+        </nav>
+
+        <div id="content">
+            <div class="mt">Lance</div>
+            <div class="tagline">Programmer / Web Developer / Freelancer</div>
+        </div>
+    </div>
+    <section class="section" id="about">
+
     </section>
-
-    <img src="man3.png" id="man">
-
-    <section id="about">
-
-    </section>
+    <script src="index.js"></script>
 </body>
 </html>
